5106550: PNG writer merge standard metadata fails for TextEntry sans #IMPLIED attributes
Reviewed-by: igor, prr